unpackaged/main/default/objects/approvalObject__c/approvalObject__c.object-meta.xml
<CustomObject>
    <label>approvalObject</label>
    <nameField>
        <label>Nombre de approvalObject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>approvalObjects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>