unpackaged/main/default/objects/approvalObject__c/fields/approvalId__c.field-meta.xml
<CustomField>
    <fullName>approvalId__c</fullName>
    <label>approvalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>