unpackaged/main/default/objects/approvalObject__c/fields/approvalLevel__c.field-meta.xml
<CustomField>
    <fullName>approvalLevel__c</fullName>
    <label>approvalLevel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>