unpackaged/main/default/objects/approvalObject__c/fields/approvalLevelValue__c.field-meta.xml
<CustomField>
    <fullName>approvalLevelValue__c</fullName>
    <label>approvalLevelValue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>