unpackaged/main/default/objects/approvalObject__c/fields/approvalName__c.field-meta.xml
<CustomField>
    <fullName>approvalName__c</fullName>
    <label>approvalName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>