unpackaged/main/default/objects/approvalObject__c/fields/approvalObject__c.field-meta.xml
<CustomField>
    <fullName>approvalObject__c</fullName>
    <label>approvalObject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>