unpackaged/main/default/objects/approvalObject__c/fields/approvalRequestedDate__c.field-meta.xml
<CustomField>
    <fullName>approvalRequestedDate__c</fullName>
    <label>approvalRequestedDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>