unpackaged/main/default/objects/approvalObject__c/fields/approvalType__c.field-meta.xml
<CustomField>
    <fullName>approvalType__c</fullName>
    <label>approvalType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>