unpackaged/main/default/objects/approvalObject__c/fields/approverName__c.field-meta.xml
<CustomField>
    <fullName>approverName__c</fullName>
    <label>approverName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>