unpackaged/main/default/objects/approvalObject__c/fields/Copiar_Datos_a_Objeto_SF__c.field-meta.xml
<CustomField>
    <fullName>Copiar_Datos_a_Objeto_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copiar Datos a Objeto SF</label>
    <type>Checkbox</type>
</CustomField>