unpackaged/main/default/objects/approvalObject__c/fields/DifT__c.field-meta.xml
<CustomField>
    <fullName>DifT__c</fullName>
    <formula>if (  ISNULL(FHR__c),0,  FHR__c - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DifT</label>
    <precision>18</precision>
    <scale>13</scale>
    <type>Number</type>
</CustomField>