unpackaged/main/default/objects/approvalObject__c/fields/Enlace_a_Registro_en_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Enlace_a_Registro_en_Aprobacion__c</fullName>
    <label>Enlace a Registro en Aprobación</label>
    <type>Url</type>
</CustomField>