unpackaged/main/default/objects/approvalObject__c/fields/Id_Objeto_A_Aprobar_Buscar_15__c.field-meta.xml
<CustomField>
    <fullName>Id_Objeto_A_Aprobar_Buscar_15__c</fullName>
    <formula>LEFT(Id_Objeto_A_Aprobar_Buscar__c, 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id_Objeto_A_Aprobar_Buscar_15</label>
    <type>Text</type>
</CustomField>