unpackaged/main/default/objects/approvalObject__c/fields/Id_Objeto_A_Aprobar_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Id_Objeto_A_Aprobar_Buscar__c</fullName>
    <label>Id Objeto A Aprobar</label>
    <length>18</length>
    <type>Text</type>
</CustomField>