unpackaged/main/default/objects/approvalObject__c/fields/Nombre_Registro_Creado_del__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Registro_Creado_del__c</fullName>
    <formula>approvalObject__c +&#39; / &#39;+ approvalName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre</label>
    <type>Text</type>
</CustomField>