unpackaged/main/default/objects/approvalObject__c/fields/platform__c.field-meta.xml
<CustomField>
    <fullName>platform__c</fullName>
    <label>platform</label>
    <length>20</length>
    <type>Text</type>
</CustomField>