unpackaged/main/default/objects/approvalObject__c/fields/requesterEmpId__c.field-meta.xml
<CustomField>
    <fullName>requesterEmpId__c</fullName>
    <label>requesterEmpId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>