unpackaged/main/default/objects/approvalObject__c/fields/requesterLogin__c.field-meta.xml
<CustomField>
    <fullName>requesterLogin__c</fullName>
    <label>requesterLogin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>