unpackaged/main/default/objects/approvalObject__c/fields/requesterName__c.field-meta.xml
<CustomField>
    <fullName>requesterName__c</fullName>
    <label>requesterName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>