unpackaged/main/default/objects/approvalObject__c/fields/Respuesta_Larga_Siebel__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Larga_Siebel__c</fullName>
    <label>Respuesta Larga Siebel</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>