unpackaged/main/default/objects/approvalObject__c/fields/Respuesta_Siebel__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Siebel__c</fullName>
    <label>Respuesta Siebel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>