unpackaged/main/default/objects/approvalObject__c/fields/SubTipo__c.field-meta.xml
<CustomField>
    <fullName>SubTipo__c</fullName>
    <label>SubTipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cedula Asesor</fullName>
            </value>
            <value>
                <fullName>Cedula Prospectador</fullName>
            </value>
            <value>
                <fullName>Plan Comision Asesor</fullName>
            </value>
            <value>
                <fullName>Plan Comision Prospectador</fullName>
            </value>
            <value>
                <fullName>Plan Bono Asesor</fullName>
            </value>
            <value>
                <fullName>Plan Bono Col. Javer</fullName>
            </value>
            <value>
                <fullName>Plan Bono Prospectador</fullName>
            </value>
            <value>
                <fullName>Plan Bono_Col. Javer</fullName>
            </value>
            <value>
                <fullName>Extension de Periodos</fullName>
            </value>
            <value>
                <fullName>Bonificaciones Batch</fullName>
            </value>
            <value>
                <fullName>Lista de Bonificaciones Batch</fullName>
            </value>
            <value>
                <fullName>Lista de Financiamientos Batch</fullName>
            </value>
            <value>
                <fullName>Lista de Precios Batch Prods</fullName>
            </value>
            <value>
                <fullName>Lista de Precios Batch</fullName>
            </value>
            <value>
                <fullName>Lista de Precios</fullName>
            </value>
            <value>
                <fullName>Bonif. Emp. de Plan de Venta</fullName>
            </value>
            <value>
                <fullName>Excepcion Bonif. Emp. ColJaver</fullName>
            </value>
            <value>
                <fullName>Bonificacion de Plan de Venta</fullName>
            </value>
            <value>
                <fullName>Financiamiento Plan de Venta</fullName>
            </value>
            <value>
                <fullName>Paquetes de Plan de Venta</fullName>
            </value>
            <value>
                <fullName>VO. Menor a Presupuesto</fullName>
            </value>
            <value>
                <fullName>Financiamiento Post Venta</fullName>
            </value>
            <value>
                <fullName>Finan PostVenta Col Javer</fullName>
            </value>
            <value>
                <fullName>Bonificacion Saldo Post Venta</fullName>
            </value>
            <value>
                <fullName>Reestructuracion Post Venta</fullName>
            </value>
            <value>
                <fullName>Subsidio</fullName>
            </value>
            <value>
                <fullName>Garantia</fullName>
            </value>
            <value>
                <fullName>Cancelacion de Escritura</fullName>
            </value>
            <value>
                <fullName>Cancelacion Formalizacion</fullName>
            </value>
            <value>
                <fullName>Gastos Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>