unpackaged/main/default/objects/approvalObject__c/fields/Tiempo_de_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_de_Resolucion__c</fullName>
    <formula>IF (   DifT__c   &gt; 0,
TEXT(FLOOR( DifT__c)) &amp; &quot; dias &quot; &amp;
TEXT( FLOOR( 24 * ( DifT__c - FLOOR(DifT__c) ))) &amp; &quot; horas&quot; 
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de Resolución</label>
    <type>Text</type>
</CustomField>