unpackaged/main/default/objects/approvalObject__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comisión</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>PreVenta</fullName>
            </value>
            <value>
                <fullName>Venta</fullName>
            </value>
            <value>
                <fullName>PostVenta</fullName>
            </value>
            <value>
                <fullName>Cancelación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>