unpackaged/main/default/objects/approvalObject__c/fields/TipoXML__c.field-meta.xml
<CustomField>
    <fullName>TipoXML__c</fullName>
    <label>TipoXML</label>
    <length>30</length>
    <type>Text</type>
</CustomField>