unpackaged/main/default/objects/approvalObject__c/fields/token__c.field-meta.xml
<CustomField>
    <fullName>token__c</fullName>
    <label>token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>