unpackaged/main/default/objects/approvalObject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>approvalObject__c</columns>
    <columns>approverName__c</columns>
    <columns>FHR__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>