unpackaged/main/default/objects/approvalObject__c/listViews/Antes_de_Seguimiento.listView-meta.xml
<ListView>
    <fullName>Antes_de_Seguimiento</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Estatus__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>2/28/2015 12:00 AM</value>
    </filters>
    <filters>
        <field>Estatus__c</field>
        <operation>equals</operation>
        <value>En Proceso de Aprobación</value>
    </filters>
    <filters>
        <field>Estatus__c</field>
        <operation>equals</operation>
    </filters>
    <label>Antes de Seguimiento</label>
</ListView>