unpackaged/main/default/objects/approvalObject__c/listViews/Gerardo_Tovar.listView-meta.xml
<ListView>
    <fullName>Gerardo_Tovar</fullName>
    <columns>NAME</columns>
    <columns>approvalObject__c</columns>
    <columns>approverName__c</columns>
    <columns>FHR__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>approverName__c</field>
        <operation>contains</operation>
        <value>TOVAR</value>
    </filters>
    <label>Gerardo_Tovar</label>
</ListView>