unpackaged/main/default/objects/approvalObject__c/listViews/Todos_Pendientes_mas_de_7_dias.listView-meta.xml
<ListView>
    <fullName>Todos_Pendientes_mas_de_7_dias</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Estatus__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>notEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Estatus__c</field>
        <operation>equals</operation>
        <value>En Proceso de Aprobación</value>
    </filters>
    <filters>
        <field>Estatus__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Tipo__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Todos Pendientes + de 7 días</label>
</ListView>